--- a/.config/swaylock/config
+++ b/.config/swaylock/config
@@ -1,2 +1,3 @@
 image=HDMI-A-2:/home/digo/.wallpapers/ign_unsplash32.png
+image=DVI-D-1:/home/digo/.wallpapers/ign_unsplash32.png
 hide-keyboard-layout
