New readme file and some changes to Widgets and fonts

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,183 +1,78 @@
 [{
-    "name": "bar1",
-    "output": "HDMI-A-2",
-    "modules-center": [
-        "custom/easy",
-        "custom/cpu-temp",
-        "custom/gpu-temp",
-        "custom/disk-root",
-        "custom/disk-hdd",
-        "custom/clock",
+  "name": "bar1",
+  "output": "HDMI-A-2",
+  "modules-center": [
+    "custom/clock",
         ],
-  "custom/easy": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/preset",
-    "signal": 3,
-    "return-type": "json",
-    "tooltip": false
-  },
-  
-  "custom/disk-root": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/root",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/countdown": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/countdown",
-    "return-type": "json",
-    "on-scroll-up": "echo $(( $(cat /tmp/countdown_timer) + 1 )) > /tmp/countdown_timer",
-    "on-scroll-down": "echo $(( $(cat /tmp/countdown_timer) - 1 )) > /tmp/countdown_timer",
-    "on-click-middle": "echo 25 > /tmp/countdown_timer",
-    "on-click": "countdown",
-    "signal": 5,
-    "tooltip": false
-  },
-  "custom/variant": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/variant",
-    "interval": 5,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/updates": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/updates",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false,
-    "signal": 30
-  },
-"custom/disk-home": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/home",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/disk-hdd": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/hdd",
-    "interval": 120,
-    "return-type": "json",
-    "tooltip": false
-  },
-"custom/gameon": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/gameon",
-    "signal": 15,
-    "return-type": "json",
-    "tooltip": false
-  },
-"custom/clock": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/day",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false
-    },
-"custom/mon": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/cur_mon DVI-D-1",
-    "return-type": "json",
-    "tooltip": false,
-    "signal": 14,
-  },
-"custom/cpu-temp": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/temp",
-    "interval": 10,
-    "return-type": "json",
-    "tooltip": false
-  },
-"custom/gpu-temp": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/gpu_temp",
-    "interval": 10,
-    "return-type": "json",
-    "tooltip": false
-  },
+        "custom/clock": {
+          "exec": "$HOME/.config/waybar/custom_widgets/day",
+          "interval": 2,
+          "return-type": "json",
+          "tooltip": false
+        }
 },
 {
-    "name": "bar2",
-    "output": "DVI-D-1",
-    "modules-center": [
-        "custom/easy",
-        "custom/countdown",
-        "custom/cpu-temp",
-        "custom/gpu-temp",
-        "custom/disk-root",
-        "custom/disk-hdd",
-        "custom/updates",
-        "custom/clock",
+  "name": "bar2",
+  "output": "DVI-D-1",
+  "modules-center": [
+    "custom/cpu-temp",
+    "custom/disk-root",
+    "custom/disk-home",
+    "custom/disk-hdd",
+    "custom/clock",
         ],
-  "custom/easy": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/preset",
-    "signal": 3,
-    "return-type": "json",
-    "tooltip": false
-  },
-  
-  "custom/disk-root": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/root",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/countdown": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/countdown",
-    "return-type": "json",
-    "on-scroll-up": "echo $(( $(cat /tmp/countdown_timer) + 1 )) > /tmp/countdown_timer",
-    "on-scroll-down": "echo $(( $(cat /tmp/countdown_timer) - 1 )) > /tmp/countdown_timer",
-    "on-click-middle": "echo 25 > /tmp/countdown_timer",
-    "on-click": "countdown",
-    "signal": 5,
-    "tooltip": false
-  },
-  "custom/variant": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/variant",
-    "interval": 5,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/updates": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/updates",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false,
-    "signal": 30
-  },
-"custom/disk-home": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/home",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false
-  },
-  "custom/disk-hdd": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/hdd",
-    "interval": 120,
-    "return-type": "json",
-    "tooltip": false
-  },
-"custom/gameon": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/gameon",
-    "signal": 15,
-    "return-type": "json",
-    "tooltip": false
-  },
-"custom/clock": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/day",
-    "interval": 60,
-    "return-type": "json",
-    "tooltip": false
-    },
-"custom/mon": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/cur_mon HDMI-A-1",
-    "return-type": "json",
-    "tooltip": false,
-    "signal": 14,
-  },
-"custom/cpu-temp": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/temp",
-    "interval": 10,
-    "return-type": "json",
-    "tooltip": false
-  },
-"custom/gpu-temp": {
-    "exec": "/home/digo/.config/waybar/custom_widgets/gpu_temp",
-    "interval": 10,
-    "return-type": "json",
-    "tooltip": false
-  },
+        "custom/disk-root": {
+          "exec": "$HOME/.config/waybar/custom_widgets/root",
+          "interval": 60,
+          "return-type": "json",
+          "tooltip": false
+        },
+        "custom/countdown": {
+          "exec": "$HOME/.config/waybar/custom_widgets/countdown",
+          "return-type": "json",
+          "on-scroll-up": "echo $(( $(cat /tmp/countdown_timer) + 1 )) > /tmp/countdown_timer",
+          "on-scroll-down": "echo $(( $(cat /tmp/countdown_timer) - 1 )) > /tmp/countdown_timer",
+          "on-click-middle": "echo 25 > /tmp/countdown_timer",
+          "on-click": "countdown",
+          "signal": 5,
+          "tooltip": false
+        },
+        "custom/variant": {
+          "exec": "$HOME/.config/waybar/custom_widgets/variant",
+          "interval": 5,
+          "return-type": "json",
+          "tooltip": false
+        },
+        "custom/updates": {
+          "exec": "$HOME/.config/waybar/custom_widgets/updates",
+          "interval": 60,
+          "return-type": "json",
+          "tooltip": false,
+          "signal": 30
+        },
+        "custom/disk-home": {
+          "exec": "$HOME/.config/waybar/custom_widgets/home",
+          "interval": 60,
+          "return-type": "json",
+          "tooltip": false
+        },
+        "custom/disk-hdd": {
+          "exec": "$HOME/.config/waybar/custom_widgets/hdd",
+          "interval": 120,
+          "return-type": "json",
+          "tooltip": false
+        },
+        "custom/clock": {
+          "exec": "$HOME/.config/waybar/custom_widgets/day",
+          "interval": 60,
+          "return-type": "json",
+          "tooltip": false
+        },
+        "custom/cpu-temp": {
+          "exec": "$HOME/.config/waybar/custom_widgets/temp",
+          "interval": 10,
+          "return-type": "json",
+          "tooltip": false
+        }
 }
 ]
