--- a/.config/wlr-which-key/config.yaml
+++ b/.config/wlr-which-key/config.yaml
@@ -1,5 +1,5 @@
 # Theming
-font: Rock Salt 12
+font: Victor Mono Bold Italic 14
 background: "#282828d0"
 color: "#fbf1c7"
 border: "#FB4934"
@@ -90,7 +90,7 @@ menu:
         cmd: nscratch.py -id monitor -m -a || foot -a monitor -T monitor -e btop 
       - key: "n"
         desc: notes
-        cmd: nscratch.py -id notes -m -a || foot -a notes -T notes -e nvim ~/.notes/index.norg 
+        cmd: nscratch.py -id notes -m -a || foot -a notes -T notes -e vim ~/.vimwiki/index.md
       - key: "h"
         desc: habits
         cmd: nscratch.py -id habits -m -a || foot -a notes -T habits -e nvim ~/.notes/habits.norg 
