--- a/.config/MangoHud/MangoHud.conf
+++ b/.config/MangoHud/MangoHud.conf
@@ -9,6 +9,7 @@ horizontal_separator_color=4c566a
 ram_color=a3be8c
 text_color=eceff4
 vram_color=a3be8c
+frametime_color=eceff4
 cpu_load_color=eceff4,d08770,bf616a
 fps_color=eceff4,d08770,bf616a
 gpu_load_color=eceff4,d08770,bf616a
@@ -26,6 +27,7 @@ hud_no_margin
 font_size=20
 position=top-left
 pci_dev=0:01:00.0
+
 
 fps
 fps_limit=0,60,30
@@ -55,4 +57,4 @@ engine_short_names
 time
 time_format=%R
 
-
+frame_timing=1
