--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -6,19 +6,19 @@ term = "alacritty"
 size = 12.0
 
 [font.bold]
-family = "Martian Mono Nerd Font"
+family = "Victor Mono Nerd Font"
 style = "Bold"
 
 [font.bold_italic]
-family = "Martian Mono Nerd Font"
+family = "Victor Mono Nerd Font"
 style = "Bold Italic"
 
 [font.italic]
-family = "Martian Mono Nerd Font"
+family = "Victor Mono Nerd Font"
 style = "Italic"
 
 [font.normal]
-family = "Martian Mono Nerd Font"
+family = "Victor Mono Nerd Font"
 style = "Bold"
 
 [window]
