--- a/.config/wlr-which-key/config.yaml
+++ b/.config/wlr-which-key/config.yaml
@@ -69,6 +69,9 @@ menu:
       - key: "w"
         desc: Windows
         cmd: nirigo.py
+      - key: "g"
+        desc: Search
+        cmd: searchon
       - key: "t"
         desc: Grab Text (Enhanced)
         cmd: grab-text
@@ -86,20 +89,20 @@ menu:
     desc: Scratchpads
     submenu:
       - key: "u"
-        desc: dropdown
+        desc: Dropdown
         cmd: nscratch.py -id dropdown -m -a || alacritty -o window.opacity=0.7 --class dropdown --title dropdown
       - key: "c"
-        desc: calculator
+        desc: Calculator
         cmd: nscratch.py -id calculator -m -a || foot -a calculator -T calculator -e python3 -q
       - key: "t"
         desc: Todo
         cmd: nscratch.py -id Kuro -m -a || kuro
       - key: "b"
-        desc: monitor
+        desc: Monitor
         cmd: nscratch.py -id monitor -m -a || foot -a monitor -T monitor -e btop 
       - key: "n"
-        desc: notes
+        desc: Notes
         cmd: nscratch.py -id notes -m -a || foot -a notes -T notes -e vim ~/.vimwiki/index.md
       - key: "h"
-        desc: habits
+        desc: Habits
         cmd: nscratch.py -id habits -m -a || foot -a notes -T habits -e nvim ~/.notes/habits.norg 
